--- a/_config.yml
+++ b/_config.yml
@@ -31,4 +31,4 @@ bing_verify:
 
 # Links to include in top navigation
 # For external links add external: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-merlot
